[package]
name = "torch-cli"
version = "0.1.0"
edition = "2021"
description = "Experimental CLI for Lantern Chat"
repository = "https://github.com/Lantern-chat/torch"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.17.0"
crossterm = "0.22.1"